--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
   <div class="wrap">
     <model-viewer
-      src="./models/PresidentLux_Test2.glb"
+      src="./PresidentLux_Test2.glb"
       camera-controls
       disable-zoom
       disable-pan
