--- a/index.html
+++ b/index.html
@@ -32,18 +32,16 @@
       loading="eager"
       reveal="auto"
 
-      /* фиксируем вертикаль (без "сверху/снизу") */
       camera-orbit="0deg 90deg 2.6m"
       min-camera-orbit="-85deg 90deg 2.6m"
       max-camera-orbit="85deg 90deg 2.6m"
 
-      /* при необходимости можно подстроить */
       camera-target="0m 1.1m 0m"
       field-of-view="30deg"
       exposure="1"
     ></model-viewer>
 
-    <div class="hint">Drag / swipe to rotate (только горизонтально, задняя часть скрыта).</div>
+    <div class="hint">Drag / swipe to rotate.</div>
   </div>
 </body>
 </html>
