--- a/index.html
+++ b/index.html
@@ -23,23 +23,23 @@
 </head>
 <body>
   <div class="wrap">
-    <model-viewer
-      src="./PresidentLux_Test2.glb"
-      camera-controls
-      disable-zoom
-      disable-pan
-      interaction-prompt="none"
-      loading="eager"
-      reveal="auto"
+<model-viewer
+  src="./PresidentLux_Test2.glb"
+  camera-controls
+  disable-zoom
+  disable-pan
+  interaction-prompt="none"
+  loading="eager"
+  reveal="auto"
 
-      camera-orbit="0deg 90deg 2.6m"
-      min-camera-orbit="-85deg 90deg 2.6m"
-      max-camera-orbit="85deg 90deg 2.6m"
+  camera-orbit="0deg 90deg 2.6m"
+  min-camera-orbit="-85deg 90deg 2.6m"
+  max-camera-orbit="85deg 90deg 2.6m"
 
-      camera-target="0m 1.1m 0m"
-      field-of-view="30deg"
-      exposure="1"
-    ></model-viewer>
+  camera-target="0m 1.1m 0m"
+  field-of-view="30deg"
+  exposure="1"
+></model-viewer>/model-viewer>
 
     <div class="hint">Drag / swipe to rotate.</div>
   </div>
