--- a/index.html
+++ b/index.html
@@ -28,18 +28,17 @@
   camera-controls
   disable-zoom
   disable-pan
+  auto-rotate="false"
   interaction-prompt="none"
-  loading="eager"
-  reveal="auto"
 
-  camera-orbit="0deg 90deg 2.6m"
-  min-camera-orbit="-85deg 90deg 2.6m"
-  max-camera-orbit="85deg 90deg 2.6m"
+  camera-orbit="0deg 90deg 5m"
+  min-camera-orbit="-85deg 90deg 5m"
+  max-camera-orbit="85deg 90deg 5m"
 
-  camera-target="0m 1.1m 0m"
-  field-of-view="30deg"
-  exposure="1"
-></model-viewer>/model-viewer>
+  camera-target="auto"
+  field-of-view="25deg"
+>
+</model-viewer>
 
     <div class="hint">Drag / swipe to rotate.</div>
   </div>
