--- a/index.html
+++ b/index.html
@@ -8,39 +8,175 @@
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 
   <style>
-    body { margin: 0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial; }
+    :root { --radius: 18px; }
+
+    body { margin: 0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial; background: #fff; }
     .wrap { max-width: 1100px; margin: 0 auto; padding: 16px; }
+
+    .viewer {
+      position: relative;
+      border-radius: var(--radius);
+      overflow: hidden;
+      background: #fff;
+      box-shadow: 0 10px 30px rgba(0,0,0,.08);
+    }
+
     model-viewer {
       width: 100%;
       height: 560px;
-      background: #fff;
       display: block;
+      background: #fff;
       touch-action: none; /* важно для iOS Safari */
-      border-radius: 16px;
     }
-    .hint { margin-top: 10px; opacity: .7; font-size: 14px; }
+
+    /* Hint overlay */
+    .hint {
+      position: absolute;
+      left: 16px;
+      bottom: 16px;
+      display: flex;
+      gap: 10px;
+      align-items: center;
+      padding: 10px 12px;
+      border-radius: 999px;
+      background: rgba(255,255,255,.88);
+      backdrop-filter: blur(8px);
+      box-shadow: 0 6px 18px rgba(0,0,0,.10);
+      user-select: none;
+      pointer-events: none; /* не мешает вращать */
+      transform-origin: left bottom;
+      opacity: 0;
+      transition: opacity .25s ease, transform .25s ease;
+    }
+    .hint.show { opacity: 1; transform: translateY(0); }
+    .hint.hide { opacity: 0; transform: translateY(6px); }
+
+    .hintText { font-size: 13px; line-height: 1.1; opacity: .8; }
+    .hintText strong { opacity: 1; }
+
+    /* Finger icon animation */
+    .finger {
+      width: 34px; height: 34px;
+      border-radius: 999px;
+      display: grid; place-items: center;
+      background: rgba(0,0,0,.04);
+    }
+    .finger svg { width: 18px; height: 18px; opacity: .75; }
+
+    .swipe {
+      position: relative;
+      width: 46px;
+      height: 10px;
+      margin-left: 2px;
+      opacity: .55;
+    }
+    .swipe::before,
+    .swipe::after {
+      content: "";
+      position: absolute;
+      top: 50%;
+      width: 10px; height: 10px;
+      border-radius: 999px;
+      background: rgba(0,0,0,.35);
+      transform: translateY(-50%);
+      animation: swipe 1.4s ease-in-out infinite;
+    }
+    .swipe::after { animation-delay: .18s; opacity: .55; }
+    @keyframes swipe {
+      0%   { left: 2px;  opacity: .2; }
+      35%  { left: 34px; opacity: .6; }
+      70%  { left: 2px;  opacity: .2; }
+      100% { left: 2px;  opacity: .2; }
+    }
+
+    @media (max-width: 600px) {
+      model-viewer { height: 420px; }
+      .hint { left: 12px; bottom: 12px; }
+    }
   </style>
 </head>
+
 <body>
   <div class="wrap">
-<model-viewer
-  src="./PresidentLux_Test2.glb"
-  camera-controls
-  disable-zoom
-  disable-pan
-  auto-rotate="false"
-  interaction-prompt="none"
+    <div class="viewer">
+      <model-viewer
+        id="mv"
+        src="./PresidentLux_Test2.glb"
 
-  camera-orbit="0deg 90deg 5m"
-  min-camera-orbit="-85deg 90deg 5m"
-  max-camera-orbit="85deg 90deg 5m"
+        camera-controls
+        disable-zoom
+        disable-pan
+        interaction-prompt="none"
+        loading="eager"
+        reveal="auto"
 
-  camera-target="auto"
-  field-of-view="25deg"
->
-</model-viewer>
+        /* камера дальше (чтобы влезало) */
+        camera-orbit="0deg 90deg 6m"
+        min-camera-orbit="-85deg 90deg 6m"
+        max-camera-orbit="85deg 90deg 6m"
 
-    <div class="hint">Drag / swipe to rotate.</div>
+        /* точка вращения (можно потом подстроить) */
+        camera-target="0m 1.5m 0m"
+        field-of-view="25deg"
+        exposure="1"
+      ></model-viewer>
+
+      <div id="hint" class="hint">
+        <div class="finger" aria-hidden="true">
+          <!-- simple finger icon -->
+          <svg viewBox="0 0 24 24" fill="none">
+            <path d="M10 12V6a2 2 0 1 1 4 0v6" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+            <path d="M14 12V8a2 2 0 1 1 4 0v7.5a4.5 4.5 0 0 1-9 0V13" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+            <path d="M10 13l-1.2-1.2a2 2 0 1 0-2.8 2.8L10 18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+          </svg>
+        </div>
+        <div class="hintText">
+          <strong>Проведите</strong> пальцем / мышью<br/>чтобы повернуть
+        </div>
+        <div class="swipe" aria-hidden="true"></div>
+      </div>
+    </div>
   </div>
+
+  <script>
+    const mv = document.getElementById('mv');
+    const hint = document.getElementById('hint');
+
+    // показываем подсказку при загрузке, скрываем после первого взаимодействия
+    function showHint() {
+      hint.classList.remove('hide');
+      hint.classList.add('show');
+    }
+    function hideHint() {
+      hint.classList.remove('show');
+      hint.classList.add('hide');
+    }
+
+    showHint();
+
+    // прячем через 6 секунд, даже если не трогали
+    const autoHide = setTimeout(hideHint, 6000);
+
+    // прячем сразу после первого взаимодействия
+    const hideOnInteract = () => {
+      clearTimeout(autoHide);
+      hideHint();
+      mv.removeEventListener('pointerdown', hideOnInteract);
+      mv.removeEventListener('touchstart', hideOnInteract, { passive: true });
+      mv.removeEventListener('mousedown', hideOnInteract);
+      mv.removeEventListener('keydown', hideOnInteract);
+    };
+
+    mv.addEventListener('pointerdown', hideOnInteract);
+    mv.addEventListener('touchstart', hideOnInteract, { passive: true });
+    mv.addEventListener('mousedown', hideOnInteract);
+    mv.addEventListener('keydown', hideOnInteract);
+
+    // если модель загрузилась — можно ещё раз кратко подсветить
+    mv.addEventListener('load', () => {
+      showHint();
+      setTimeout(hideHint, 4500);
+    });
+  </script>
 </body>
 </html>
