--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
     /* ---------- старт авто-движения ---------- */
     let start = null;
-    const duration = 18000; // 18 секунд на 180°
+    const duration = 22000; // 22 секунды на 180°
     const from = -limit;
     const to = limit;
 
